--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -3,5 +3,10 @@
 	"key.ltpv.toggle_side": "切换相机到另一侧",
 	"key.ltpv.adjust_position": "按住调节相机位置",
 	"key.ltpv.force_aiming": "按住强制瞄准",
-	"key.ltpv.toggle_aiming": "短按切换瞄准状态"
+	"key.ltpv.toggle_aiming": "短按切换瞄准状态",
+	"options.ltpv.is_mod_enable": "本模组是否启用",
+	"options.ltpv.is_3rd_person_by_default": "是否默认启用第三人称",
+	"options.ltpv.available_distance_count": "可选的距离数量",
+	"options.ltpv.distance_min": "距离可调范围的下限",
+	"options.ltpv.distance_max": "距离可调范围的上限"
 }
