feat; hold Z to adjust aiming offset

--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -8,5 +8,6 @@
 	"options.ltpv.available_distance_count": "可选的距离数量",
 	"options.ltpv.distance_min": "距离可调范围的下限",
 	"options.ltpv.distance_max": "距离可调范围的上限",
-	"options.ltpv.camera_ray_trace_length": "相机视线探测距离"
+	"options.ltpv.camera_ray_trace_length": "相机视线探测距离",
+	"options.ltpv.aiming_offset_max": "瞄准偏移量的可调最大值"
 }
