--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -8,5 +8,7 @@
 	"options.ltpv.available_distance_count": "Number of Available Distances",
 	"options.ltpv.distance_min": "Minimum Adjustable Distance Range",
 	"options.ltpv.distance_max": "Maximum Adjustable Distance Range",
-	"options.ltpv.camera_ray_trace_length": "Camera ray trace length"
+	"options.ltpv.camera_ray_trace_length": "Camera ray trace length",
+	"options.ltpv.aiming_offset_max": "Aiming offset max"
+
 }
