--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
-	"key.categories.third_person_perspective": "第三人称视角",
+	"key.categories.third_person": "第三人称视角",
 	"key.ltpv.toggle_side": "切换相机到另一侧",
 	"key.ltpv.adjust_position": "按住调节相机位置",
 	"key.ltpv.force_aiming": "按住强制瞄准",
