--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -5,9 +5,11 @@
 	"key.l3p.force_aiming": "Hold to Force Aim",
 	"key.l3p.toggle_aiming": "Toggle Aiming",
 	"options.l3p.is_mod_enable": "Is this mod enabled",
-	"options.l3p.available_distance_count": "Number of Available Distances",
-	"options.l3p.distance_min": "Minimum Adjustable Distance Range",
-	"options.l3p.distance_max": "Maximum Adjustable Distance Range",
+	"options.l3p.available_distance_count": "Number of available distances",
+	"options.l3p.distance_min": "Minimum adjustable distance range",
+	"options.l3p.distance_max": "Maximum adjustable distance range",
 	"options.l3p.camera_ray_trace_length": "Camera ray trace length",
-	"options.l3p.aiming_offset_max": "Aiming offset max"
+	"options.l3p.aiming_offset_max": "Aiming offset max",
+	"options.l3p.projectile_auto_aim": "Auto aim when firing projectiles",
+	"l3p.placeholder": ""
 }
