--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -1,15 +1,27 @@
 {
-	"key.categories.third_person": "Leawind's Third Person",
+	"text.craftgr.config.title": "Leawind's Third Person",
+	"text.leawind_third_person.description": "Offers improved third person perspective.",
+	"l3p.options.category.common": "Common",
+	"l3p.options.category.common.desc": "Some common configurations",
+	"options.l3p.is_mod_enable": "Is this mod enabled",
+	"options.l3p.is_mod_enable.desc": "Will be vanilla third person perspective if disabled",
+	"options.l3p.available_distance_count": "Number of available distances",
+	"options.l3p.available_distance_count.desc": "Use mouse scroll to switch distance between camera and player.",
+	"options.l3p.camera_distance_min": "Minimum adjustable distance range",
+	"options.l3p.camera_distance_min.desc": "Minimum distance  between camera and player",
+	"options.l3p.camera_distance_max": "Maximum adjustable distance range",
+	"options.l3p.camera_distance_max.desc": "Maximum distance  between camera and player",
+	"options.l3p.camera_ray_trace_length": "Camera ray trace length",
+	"options.l3p.camera_ray_trace_length.desc": "When the target object exceeds this distance, the player's line of sight will be parallel to the camera",
+	"options.l3p.aiming_offset_max": "Aiming offset max",
+	"options.l3p.aiming_offset_max.desc": "The maximum adjustable distance between the camera's line of sight and the player's line of sight when aiming",
+	"options.l3p.projectile_auto_aim": "Auto aim when firing projectiles",
+	"options.l3p.projectile_auto_aim.desc": "When aiming at a block or entity, automatically adjust the shooting angle to hit that target",
+	"key.categories.leawind_third_person": "Leawind's Third Person",
+	"key.l3p.open_config_menu": "Open config menu",
 	"key.l3p.toggle_side": "Toggle Camera to the Other Side",
 	"key.l3p.adjust_position": "Hold to Adjust Camera Position",
 	"key.l3p.force_aiming": "Hold to Force Aim",
 	"key.l3p.toggle_aiming": "Toggle Aiming",
-	"options.l3p.is_mod_enable": "Is this mod enabled",
-	"options.l3p.available_distance_count": "Number of available distances",
-	"options.l3p.distance_min": "Minimum adjustable distance range",
-	"options.l3p.distance_max": "Maximum adjustable distance range",
-	"options.l3p.camera_ray_trace_length": "Camera ray trace length",
-	"options.l3p.aiming_offset_max": "Aiming offset max",
-	"options.l3p.projectile_auto_aim": "Auto aim when firing projectiles",
-	"l3p.placeholder": ""
+	"text.l3p.placeholder": ""
 }
