--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -1,15 +1,27 @@
 {
-	"key.categories.third_person": "第三人称视角",
+	"text.leawind_third_person.title": "Leawind的第三人称视角",
+	"text.leawind_third_person.description": "提供更好的第三人称视角",
+	"l3p.options.category.common": "常用",
+	"l3p.options.category.common.desc": "一些常用的配置",
+	"options.l3p.is_mod_enable": "本模组是否启用",
+	"options.l3p.is_mod_enable.desc": "关闭后将显示原版第三人称视角",
+	"options.l3p.available_distance_count": "可选的距离数量",
+	"options.l3p.available_distance_count.desc": "使用鼠标滚轮可以调整相机到玩家距离，该选项的值是距离的档位数量",
+	"options.l3p.camera_distance_min": "距离下限",
+	"options.l3p.camera_distance_min.desc": "使用滚轮调整时相机到玩家的最小距离",
+	"options.l3p.camera_distance_max": "距离上限",
+	"options.l3p.camera_distance_max.desc": "使用滚轮调整时相机到玩家的最大距离",
+	"options.l3p.camera_ray_trace_length": "相机视线探测距离",
+	"options.l3p.camera_ray_trace_length.desc": "当瞄准的物体超过这个距离时，玩家视线会和相机平行",
+	"options.l3p.aiming_offset_max": "瞄准偏移量上限",
+	"options.l3p.aiming_offset_max.desc": "瞄准时相机视线与玩家视线间距离的可调整的最大值",
+	"options.l3p.projectile_auto_aim": "射击时自动瞄准",
+	"options.l3p.projectile_auto_aim.desc": "瞄准方块或实体时，自动调整射击角度以击中该目标",
+	"key.categories.leawind_third_person": "Leawind的第三人称视角",
+	"key.l3p.open_config_menu": "打开配置菜单",
 	"key.l3p.toggle_side": "切换相机到另一侧",
 	"key.l3p.adjust_position": "按住调节相机位置",
 	"key.l3p.force_aiming": "按住强制瞄准",
 	"key.l3p.toggle_aiming": "短按切换瞄准状态",
-	"options.l3p.is_mod_enable": "本模组是否启用",
-	"options.l3p.available_distance_count": "可选的距离数量",
-	"options.l3p.distance_min": "距离可调范围的下限",
-	"options.l3p.distance_max": "距离可调范围的上限",
-	"options.l3p.camera_ray_trace_length": "相机视线探测距离",
-	"options.l3p.aiming_offset_max": "瞄准偏移量的可调最大值",
-	"options.l3p.projectile_auto_aim": "射击弹射物时自动瞄准",
-	"l3p.placeholder": ""
+	"text.l3p.comment.placeholder": ""
 }
