--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -1,27 +1,49 @@
 {
-	"text.leawind_third_person.title": "Leawind的第三人称视角",
-	"text.leawind_third_person.description": "提供更好的第三人称视角",
-	"l3p.options.category.common": "常用",
-	"l3p.options.category.common.desc": "一些常用的配置",
-	"options.l3p.is_mod_enable": "本模组是否启用",
-	"options.l3p.is_mod_enable.desc": "关闭后将显示原版第三人称视角",
-	"options.l3p.available_distance_count": "可选的距离数量",
-	"options.l3p.available_distance_count.desc": "使用鼠标滚轮可以调整相机到玩家距离，该选项的值是距离的档位数量",
-	"options.l3p.camera_distance_min": "距离下限",
-	"options.l3p.camera_distance_min.desc": "使用滚轮调整时相机到玩家的最小距离",
-	"options.l3p.camera_distance_max": "距离上限",
-	"options.l3p.camera_distance_max.desc": "使用滚轮调整时相机到玩家的最大距离",
-	"options.l3p.camera_ray_trace_length": "相机视线探测距离",
-	"options.l3p.camera_ray_trace_length.desc": "当瞄准的物体超过这个距离时，玩家视线会和相机平行",
-	"options.l3p.aiming_offset_max": "瞄准偏移量上限",
-	"options.l3p.aiming_offset_max.desc": "瞄准时相机视线与玩家视线间距离的可调整的最大值",
-	"options.l3p.projectile_auto_aim": "射击时自动瞄准",
-	"options.l3p.projectile_auto_aim.desc": "瞄准方块或实体时，自动调整射击角度以击中该目标",
+	"leawind_third_person.text.title": "Leawind的第三人称视角",
+	"leawind_third_person.text.description": "提供更好的第三人称视角",
+	"leawind_third_person.option_category.common": "常用",
+	"leawind_third_person.option_category.common.desc": "一些常用的配置",
+	"leawind_third_person.option_category.camera_offset": "相机偏移",
+	"leawind_third_person.option_category.camera_offset.desc": "你可能不希望玩家一直处在屏幕正中央，而是加上一点偏移量",
+	"leawind_third_person.option_category.smooth_factors": "平滑系数",
+	"leawind_third_person.option_category.smooth_factors.desc": "各种平滑效果的平滑程度",
+	"leawind_third_person.option_category.misc": "杂项",
+	"leawind_third_person.option_category.misc.desc": "",
+	"leawind_third_person.option_group.camera_distance_adjustment": "相机距离调节",
+	"leawind_third_person.option_group.normal_mode": "正常模式",
+	"leawind_third_person.option_group.normal_mode.desc": "当没有瞄准时",
+	"leawind_third_person.option_group.aiming_mode": "瞄准模式",
+	"leawind_third_person.option_group.aiming_mode.desc": "当使用弓|弩|戟等瞄准时",
+	"leawind_third_person.option.is_mod_enable": "本模组是否启用",
+	"leawind_third_person.option.is_mod_enable.desc": "禁用后将显示原版第三人称视角",
+	"leawind_third_person.option.available_distance_count": "可选的距离数量",
+	"leawind_third_person.option.available_distance_count.desc": "使用鼠标滚轮可以调整相机到玩家距离，该选项的值是距离的档位数量",
+	"leawind_third_person.option.camera_distance_min": "距离下限",
+	"leawind_third_person.option.camera_distance_min.desc": "使用滚轮调整时相机到玩家的最小距离",
+	"leawind_third_person.option.camera_distance_max": "距离上限",
+	"leawind_third_person.option.camera_ray_trace_length.desc": "当瞄准的物体超过这个距离时，玩家视线会和相机视线平行",
+	"leawind_third_person.option.aiming_offset_max": "瞄准偏移量上限",
+	"leawind_third_person.option.aiming_offset_max.desc": "瞄准时相机视线与玩家视线间距离的可调整的最大值",
+	"leawind_third_person.option.flying_smooth_factor": "飞行时相机跟随的平滑系数",
+	"leawind_third_person.option.flying_smooth_factor.desc": "",
+	"leawind_third_person.option.smooth_factor_horizon": "水平平滑系数",
+	"leawind_third_person.option.smooth_factor_horizon.desc": "",
+	"leawind_third_person.option.smooth_factor_vertical": "垂直平滑系数",
+	"leawind_third_person.option.smooth_factor_vertical.desc": "",
+	"leawind_third_person.option.camera_offset_smooth_factor": "相机偏移平滑系数",
+	"leawind_third_person.option.camera_offset_smooth_factor.desc": "",
+	"leawind_third_person.option.max_distance": "最大距离",
+	"leawind_third_person.option.offset_x": "X偏移",
+	"leawind_third_person.option.offset_y": "Y偏移",
+	"leawind_third_person.option.camera_distance_max.desc": "使用滚轮调整时相机到玩家的最大距离",
+	"leawind_third_person.option.camera_ray_trace_length": "相机视线探测距离",
+	"leawind_third_person.option.projectile_auto_aim": "射击时自动瞄准",
+	"leawind_third_person.option.projectile_auto_aim.desc": "瞄准方块或实体时，自动调整射击角度以击中该目标",
 	"key.categories.leawind_third_person": "Leawind的第三人称视角",
-	"key.l3p.open_config_menu": "打开配置菜单",
-	"key.l3p.toggle_side": "切换相机到另一侧",
-	"key.l3p.adjust_position": "按住调节相机位置",
-	"key.l3p.force_aiming": "按住强制瞄准",
-	"key.l3p.toggle_aiming": "短按切换瞄准状态",
-	"text.l3p.comment.placeholder": ""
+	"key.leawind_third_person.open_config_menu": "打开配置菜单",
+	"key.leawind_third_person.toggle_side": "切换相机到另一侧",
+	"key.leawind_third_person.adjust_position": "按住调节相机位置",
+	"key.leawind_third_person.force_aiming": "按住强制瞄准",
+	"key.leawind_third_person.toggle_aiming": "短按切换瞄准状态",
+	"leawind_third_person.text.placeholder": ""
 }
