--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -1,27 +1,57 @@
 {
-	"text.craftgr.config.title": "Leawind's Third Person",
-	"text.leawind_third_person.description": "Offers improved third person perspective.",
-	"l3p.options.category.common": "Common",
-	"l3p.options.category.common.desc": "Some common configurations",
-	"options.l3p.is_mod_enable": "Is this mod enabled",
-	"options.l3p.is_mod_enable.desc": "Will be vanilla third person perspective if disabled",
-	"options.l3p.available_distance_count": "Number of available distances",
-	"options.l3p.available_distance_count.desc": "Use mouse scroll to switch distance between camera and player.",
-	"options.l3p.camera_distance_min": "Minimum adjustable distance range",
-	"options.l3p.camera_distance_min.desc": "Minimum distance  between camera and player",
-	"options.l3p.camera_distance_max": "Maximum adjustable distance range",
-	"options.l3p.camera_distance_max.desc": "Maximum distance  between camera and player",
-	"options.l3p.camera_ray_trace_length": "Camera ray trace length",
-	"options.l3p.camera_ray_trace_length.desc": "When the target object exceeds this distance, the player's line of sight will be parallel to the camera",
-	"options.l3p.aiming_offset_max": "Aiming offset max",
-	"options.l3p.aiming_offset_max.desc": "The maximum adjustable distance between the camera's line of sight and the player's line of sight when aiming",
-	"options.l3p.projectile_auto_aim": "Auto aim when firing projectiles",
-	"options.l3p.projectile_auto_aim.desc": "When aiming at a block or entity, automatically adjust the shooting angle to hit that target",
+	"leawind_third_person.text.title": "Leawind's Third Person",
+	"leawind_third_person.text.description": "Provides an enhanced third-person perspective.",
+	"leawind_third_person.option_category.common": "Common",
+	"leawind_third_person.option_category.common.desc": "Some commonly used configurations.",
+	"leawind_third_person.option_category.camera_offset": "Camera Offset",
+	"leawind_third_person.option_category.camera_offset.desc": "Adjusts the player's position on the screen and other parameters. You don't need to manually adjust the options on this page because it can be done in-game by holding Z and using the mouse.",
+	"leawind_third_person.option_category.smooth_factors": "Smooth Factors",
+	"leawind_third_person.option_category.smooth_factors.desc": "Smooth factors represent the smoothness level of various smoothing effects. A smooth factor of 0 is equivalent to no smoothing, meaning an immediate reach to the target value. A smooth factor of 1 is equivalent to infinite smoothness, meaning it will never reach the target value.",
+	"leawind_third_person.option_category.misc": "Miscellaneous",
+	"leawind_third_person.option_category.misc.desc": "",
+	"leawind_third_person.option_group.camera_distance_adjustment": "Camera Distance Adjustment",
+	"leawind_third_person.option_group.camera_distance_adjustment.desc": "In third person mode, holding specific keys allows adjusting the camera-to-player distance with the scroll wheel. Here, you can set the adjustment range for the distance.",
+	"leawind_third_person.option_group.normal_mode": "Normal Mode",
+	"leawind_third_person.option_group.normal_mode.desc": "When not aiming.",
+	"leawind_third_person.option_group.aiming_mode": "Aiming Mode",
+	"leawind_third_person.option_group.aiming_mode.desc": "When aiming with bows, crossbows, spears, etc.",
+	"leawind_third_person.option.is_mod_enable": "Is the mod enabled",
+	"leawind_third_person.option.is_mod_enable.desc": "Disabling will display the original third-person view.",
+	"leawind_third_person.option.available_distance_count": "Available Distance Count",
+	"leawind_third_person.option.available_distance_count.desc": "Use the mouse scroll wheel to adjust the camera-to-player distance. The value of this option is the number of distance levels.",
+	"leawind_third_person.option.camera_distance_min": "Minimum Distance",
+	"leawind_third_person.option.camera_distance_min.desc": "Minimum distance from the player when adjusting with the scroll wheel.",
+	"leawind_third_person.option.camera_distance_max": "Maximum Distance",
+	"leawind_third_person.option.camera_distance_max.desc": "Maximum distance from the player when adjusting with the scroll wheel.",
+	"leawind_third_person.option.aiming_offset_max": "Aiming Offset Maximum",
+	"leawind_third_person.option.aiming_offset_max.desc": "Maximum adjustable distance between the camera line of sight and the player's line of sight when aiming.",
+	"leawind_third_person.option.flying_smooth_factor": "Flying Smooth Factor",
+	"leawind_third_person.option.flying_smooth_factor.desc": "",
+	"leawind_third_person.option.smooth_factor_horizon": "Horizontal Smooth Factor",
+	"leawind_third_person.option.smooth_factor_horizon.desc": "",
+	"leawind_third_person.option.smooth_factor_vertical": "Vertical Smooth Factor",
+	"leawind_third_person.option.smooth_factor_vertical.desc": "",
+	"leawind_third_person.option.camera_offset_smooth_factor": "Camera Offset Smooth Factor",
+	"leawind_third_person.option.camera_offset_smooth_factor.desc": "",
+	"leawind_third_person.option.distance_smooth_factor": "Distance Smooth Factor",
+	"leawind_third_person.option.distance_smooth_factor.desc": "When the player is stationary, the change in distance between the camera and the player to the target distance is smoothed by this factor.",
+	"leawind_third_person.option.max_distance": "Maximum Camera-to-Player Distance",
+	"leawind_third_person.option.max_distance.desc": "",
+	"leawind_third_person.option.offset_x": "X Offset",
+	"leawind_third_person.option.offset_x.desc": "",
+	"leawind_third_person.option.offset_y": "Y Offset",
+	"leawind_third_person.option.offset_y.desc": "",
+	"leawind_third_person.option.offset_middle": "Y Offset When Centered",
+	"leawind_third_person.option.offset_middle.desc": "Hold specific keys can center the view. When centered, X offset is fixed at 0, and the player is in the center of the screen. This option adjusts the Y offset in this state.",
+	"leawind_third_person.option.camera_ray_trace_length": "Camera Line of Sight Detection Distance",
+	"leawind_third_person.option.camera_ray_trace_length.desc": "When aiming at an object beyond this distance, the player's line of sight will be parallel to the camera line of sight.",
+	"leawind_third_person.option.projectile_auto_aim": "Auto-Aim While Shooting",
+	"leawind_third_person.option.projectile_auto_aim.desc": "When aiming at a block or entity, automatically adjust the shooting angle to hit the target.",
 	"key.categories.leawind_third_person": "Leawind's Third Person",
-	"key.l3p.open_config_menu": "Open config menu",
-	"key.l3p.toggle_side": "Toggle Camera to the Other Side",
-	"key.l3p.adjust_position": "Hold to Adjust Camera Position",
-	"key.l3p.force_aiming": "Hold to Force Aim",
-	"key.l3p.toggle_aiming": "Toggle Aiming",
-	"text.l3p.placeholder": ""
+	"key.leawind_third_person.open_config_menu": "Open Configuration Menu",
+	"key.leawind_third_person.toggle_side": "Toggle Camera to the Other Side",
+	"key.leawind_third_person.adjust_position": "Hold to Adjust Camera Position",
+	"key.leawind_third_person.force_aiming": "Hold to Force Aim",
+	"key.leawind_third_person.toggle_aiming": "Press to Toggle Aiming State",
+	"leawind_third_person.text.placeholder": ""
 }
