--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -4,12 +4,13 @@
 	"leawind_third_person.option_category.common": "常用",
 	"leawind_third_person.option_category.common.desc": "一些常用的配置",
 	"leawind_third_person.option_category.camera_offset": "相机偏移",
-	"leawind_third_person.option_category.camera_offset.desc": "你可能不希望玩家一直处在屏幕正中央，而是加上一点偏移量",
+	"leawind_third_person.option_category.camera_offset.desc": "调整玩家在屏幕上的位置等参数。!你不需要手动调整此页的选项们，因为可以在游戏中按住Z后用鼠标调整。",
 	"leawind_third_person.option_category.smooth_factors": "平滑系数",
-	"leawind_third_person.option_category.smooth_factors.desc": "各种平滑效果的平滑程度",
+	"leawind_third_person.option_category.smooth_factors.desc": "平滑系数可以理解为平滑效果的平滑程度。平滑系数为0相当于没有平滑，也就是立即达到目标值。1相当于无限平滑，也就是永远不会达到目标值。",
 	"leawind_third_person.option_category.misc": "杂项",
 	"leawind_third_person.option_category.misc.desc": "",
 	"leawind_third_person.option_group.camera_distance_adjustment": "相机距离调节",
+	"leawind_third_person.option_group.camera_distance_adjustment.desc": "第三人称下按住特定按键时可以用滚轮调整相机到玩家的距离。此处可以设置距离的调节范围。",
 	"leawind_third_person.option_group.normal_mode": "正常模式",
 	"leawind_third_person.option_group.normal_mode.desc": "当没有瞄准时",
 	"leawind_third_person.option_group.aiming_mode": "瞄准模式",
@@ -21,10 +22,10 @@
 	"leawind_third_person.option.camera_distance_min": "距离下限",
 	"leawind_third_person.option.camera_distance_min.desc": "使用滚轮调整时相机到玩家的最小距离",
 	"leawind_third_person.option.camera_distance_max": "距离上限",
-	"leawind_third_person.option.camera_ray_trace_length.desc": "当瞄准的物体超过这个距离时，玩家视线会和相机视线平行",
+	"leawind_third_person.option.camera_distance_max.desc": "使用滚轮调整时相机到玩家的最大距离",
 	"leawind_third_person.option.aiming_offset_max": "瞄准偏移量上限",
 	"leawind_third_person.option.aiming_offset_max.desc": "瞄准时相机视线与玩家视线间距离的可调整的最大值",
-	"leawind_third_person.option.flying_smooth_factor": "飞行时相机跟随的平滑系数",
+	"leawind_third_person.option.flying_smooth_factor": "飞行时相机跟随玩家的平滑系数",
 	"leawind_third_person.option.flying_smooth_factor.desc": "",
 	"leawind_third_person.option.smooth_factor_horizon": "水平平滑系数",
 	"leawind_third_person.option.smooth_factor_horizon.desc": "",
@@ -32,11 +33,18 @@
 	"leawind_third_person.option.smooth_factor_vertical.desc": "",
 	"leawind_third_person.option.camera_offset_smooth_factor": "相机偏移平滑系数",
 	"leawind_third_person.option.camera_offset_smooth_factor.desc": "",
-	"leawind_third_person.option.max_distance": "最大距离",
+	"leawind_third_person.option.distance_smooth_factor": "距离平滑系数",
+	"leawind_third_person.option.distance_smooth_factor.desc": "当玩家静止时，相机与玩家间的距离 变化为 目标距离 的平滑系数",
+	"leawind_third_person.option.max_distance": "相机到玩家的最大距离",
+	"leawind_third_person.option.max_distance.desc": "",
 	"leawind_third_person.option.offset_x": "X偏移",
+	"leawind_third_person.option.offset_x.desc": "",
 	"leawind_third_person.option.offset_y": "Y偏移",
-	"leawind_third_person.option.camera_distance_max.desc": "使用滚轮调整时相机到玩家的最大距离",
+	"leawind_third_person.option.offset_y.desc": "",
+	"leawind_third_person.option.offset_middle": "居中时的Y偏移",
+	"leawind_third_person.option.offset_middle.desc": "长按特定按键可以居中，居中状态下X偏移固定为0，玩家处于屏幕中间。本选项可以调整此时的Y偏移。",
 	"leawind_third_person.option.camera_ray_trace_length": "相机视线探测距离",
+	"leawind_third_person.option.camera_ray_trace_length.desc": "当瞄准的物体超过这个距离时，玩家视线会和相机视线平行",
 	"leawind_third_person.option.projectile_auto_aim": "射击时自动瞄准",
 	"leawind_third_person.option.projectile_auto_aim.desc": "瞄准方块或实体时，自动调整射击角度以击中该目标",
 	"key.categories.leawind_third_person": "Leawind的第三人称视角",
