feat: aiming mode algorithm for camera offset is now same as normal mode

--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -41,8 +41,8 @@
 	"leawind_third_person.option.offset_x.desc": "",
 	"leawind_third_person.option.offset_y": "Y Offset",
 	"leawind_third_person.option.offset_y.desc": "",
-	"leawind_third_person.option.offset_middle": "Y Offset When Centered",
-	"leawind_third_person.option.offset_middle.desc": "Hold specific keys can center the view. When centered, X offset is fixed at 0, and the player is in the center of the screen. This option adjusts the Y offset in this state.",
+	"leawind_third_person.option.offset_center": "Y Offset When Centered",
+	"leawind_third_person.option.offset_center.desc": "Hold specific keys can center the view. When centered, X offset is fixed at 0, and the player is in the center of the screen. This option adjusts the Y offset in this state.",
 	"leawind_third_person.option.camera_ray_trace_length": "Camera Line of Sight Detection Distance",
 	"leawind_third_person.option.camera_ray_trace_length.desc": "When aiming at an object beyond this distance, the player's line of sight will be parallel to the camera line of sight.",
 	"leawind_third_person.option.projectile_auto_aim": "Auto-Aim While Shooting",
