--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -41,8 +41,8 @@
 	"leawind_third_person.option.offset_x.desc": "",
 	"leawind_third_person.option.offset_y": "Y偏移",
 	"leawind_third_person.option.offset_y.desc": "",
-	"leawind_third_person.option.offset_middle": "居中时的Y偏移",
-	"leawind_third_person.option.offset_middle.desc": "长按特定按键可以居中，居中状态下X偏移固定为0，玩家处于屏幕中间。本选项可以调整此时的Y偏移。",
+	"leawind_third_person.option.offset_center": "居中时的Y偏移",
+	"leawind_third_person.option.offset_center.desc": "长按特定按键可以居中，居中状态下X偏移固定为0，玩家处于屏幕中间。本选项可以调整此时的Y偏移。",
 	"leawind_third_person.option.camera_ray_trace_length": "相机视线探测距离",
 	"leawind_third_person.option.camera_ray_trace_length.desc": "当瞄准的物体超过这个距离时，玩家视线会和相机视线平行",
 	"leawind_third_person.option.projectile_auto_aim": "射击时自动瞄准",
