--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
-	"leawind_third_person.text.title": "Leawind的第三人称视角",
+	"leawind_third_person.text.title": "Leawind的第三人称",
 	"leawind_third_person.text.description": "提供更好的第三人称视角",
 	"leawind_third_person.option_category.common": "常用",
 	"leawind_third_person.option_category.common.desc": "一些常用的配置",
@@ -16,7 +16,7 @@
 	"leawind_third_person.option_group.aiming_mode": "瞄准模式",
 	"leawind_third_person.option_group.aiming_mode.desc": "当使用弓|弩|戟等瞄准时",
 	"leawind_third_person.option.is_mod_enable": "本模组是否启用",
-	"leawind_third_person.option.is_mod_enable.desc": "禁用后将显示原版第三人称视角",
+	"leawind_third_person.option.is_mod_enable.desc": "禁用后将显示原版第三人称视角，但仍可以按键打开配置屏幕",
 	"leawind_third_person.option.available_distance_count": "可选的距离数量",
 	"leawind_third_person.option.available_distance_count.desc": "使用鼠标滚轮可以调整相机到玩家距离，该选项的值是距离的档位数量",
 	"leawind_third_person.option.camera_distance_min": "距离下限",
@@ -45,7 +45,7 @@
 	"leawind_third_person.option.camera_ray_trace_length.desc": "当瞄准的物体超过这个距离时，玩家视线会和相机视线平行",
 	"leawind_third_person.option.projectile_auto_aim": "射击时自动瞄准",
 	"leawind_third_person.option.projectile_auto_aim.desc": "瞄准方块或实体时，自动调整射击角度以击中该目标",
-	"key.categories.leawind_third_person": "Leawind的第三人称视角",
+	"key.categories.leawind_third_person": "Leawind的第三人称",
 	"key.leawind_third_person.open_config_menu": "打开配置菜单",
 	"key.leawind_third_person.toggle_side": "切换相机到另一侧",
 	"key.leawind_third_person.adjust_position": "按住调节相机位置",
