--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -15,8 +15,14 @@
 	"leawind_third_person.option_group.normal_mode.desc": "When not aiming.",
 	"leawind_third_person.option_group.aiming_mode": "Aiming Mode",
 	"leawind_third_person.option_group.aiming_mode.desc": "When aiming with bows, crossbows, spears, etc.",
+	"leawind_third_person.option_group.crosshair": "Crosshair in third person mode",
+	"leawind_third_person.option_group.crosshair.desc": "",
 	"leawind_third_person.option.is_mod_enable": "Is the mod enabled",
 	"leawind_third_person.option.is_mod_enable.desc": "Disabling will display the original third-person view. But you can still open config menu by pressing specified key.",
+	"leawind_third_person.option.render_crosshair_when_aiming": "Render crosshair when aiming",
+	"leawind_third_person.option.render_crosshair_when_aiming.desc": "",
+	"leawind_third_person.option.render_crosshair_when_not_aiming": "Render crosshair when not aiming",
+	"leawind_third_person.option.render_crosshair_when_not_aiming.desc": "",
 	"leawind_third_person.option.rotate_to_moving_direction": "Auto rotate to moving direction",
 	"leawind_third_person.option.rotate_to_moving_direction.desc": "When player moving, does player auto rotate to the moving direction?",
 	"leawind_third_person.option.available_distance_count": "Available Distance Count",
