--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -16,15 +16,19 @@
 	"leawind_third_person.option_group.aiming_mode": "瞄准模式",
 	"leawind_third_person.option_group.aiming_mode.desc": "当使用弓|弩|戟等瞄准时",
 	"leawind_third_person.option_group.crosshair": "第三人称准星",
-	"leawind_third_person.option_group.crosshair.desc": "第三人称下的准星相关设置",
+	"leawind_third_person.option_group.crosshair.desc": "",
+	"leawind_third_person.option_group.player_rotation": "玩家转动",
+	"leawind_third_person.option_group.player_rotation.desc": "",
 	"leawind_third_person.option.is_mod_enable": "本模组是否启用",
 	"leawind_third_person.option.is_mod_enable.desc": "禁用后将显示原版第三人称视角，但仍可以按键打开配置屏幕",
+	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming": "未瞄准时强制玩家跟随相机转动",
+	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming.desc": "未瞄准时强制玩家视线和相机视线保持平行",
+	"leawind_third_person.option.rotate_to_moving_direction": "玩家移动时自动转向前进的方向",
+	"leawind_third_person.option.rotate_to_moving_direction.desc": "玩家移动时自动转向前进的方向",
 	"leawind_third_person.option.render_crosshair_when_aiming": "瞄准时显示准星",
 	"leawind_third_person.option.render_crosshair_when_aiming.desc": "在瞄准状态下显示准星",
-	"leawind_third_person.option.render_crosshair_when_not_aiming": "非瞄准时显示准星",
-	"leawind_third_person.option.render_crosshair_when_not_aiming.desc": "在非瞄准状态下显示准星",
-	"leawind_third_person.option.rotate_to_moving_direction": "玩家移动时自动转向前进的方向",
-	"leawind_third_person.option.rotate_to_moving_direction.desc": "玩家移动时是否自动转向前进的方向",
+	"leawind_third_person.option.render_crosshair_when_not_aiming": "未瞄准时显示准星",
+	"leawind_third_person.option.render_crosshair_when_not_aiming.desc": "在未瞄准状态下显示准星",
 	"leawind_third_person.option.available_distance_count": "可选的距离数量",
 	"leawind_third_person.option.available_distance_count.desc": "使用鼠标滚轮可以调整相机到玩家距离，该选项的值是距离的档位数量",
 	"leawind_third_person.option.camera_distance_min": "距离下限",
