--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -19,8 +19,14 @@
 	"leawind_third_person.option_group.crosshair.desc": "",
 	"leawind_third_person.option_group.player_rotation": "玩家转动",
 	"leawind_third_person.option_group.player_rotation.desc": "",
+	"leawind_third_person.option_group.player_fade_out": "玩家淡出",
+	"leawind_third_person.option_group.player_fade_out.desc": "狭小空间内让玩家淡出，避免遮挡视线。",
 	"leawind_third_person.option.is_mod_enable": "本模组是否启用",
 	"leawind_third_person.option.is_mod_enable.desc": "禁用后将显示原版第三人称视角，但仍可以按键打开配置屏幕",
+	"leawind_third_person.option.player_fade_out_enabled": "启用玩家淡出",
+	"leawind_third_person.option.player_fade_out_enabled.desc": "避免玩家实体遮挡视线",
+	"leawind_third_person.option.player_fade_out_threshold": "玩家淡出距离阈值",
+	"leawind_third_person.option.player_fade_out_threshold.desc": "当相机与玩家距离小于阈值时，玩家变得不可见",
 	"leawind_third_person.option.lock_camera_pitch_angle": "锁定相机的俯仰角",
 	"leawind_third_person.option.lock_camera_pitch_angle.desc": "锁定后无法上下转动",
 	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming": "未瞄准时强制玩家跟随相机转动",
