--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -19,8 +19,12 @@
 	"leawind_third_person.option_group.crosshair.desc": "",
 	"leawind_third_person.option_group.player_rotation": "Player rotation",
 	"leawind_third_person.option_group.player_rotation.desc": "",
+	"leawind_third_person.option_group.player_fade_out": "Player fade out",
+	"leawind_third_person.option_group.player_fade_out.desc": "In fact not fading out, but suddenly invisible.",
 	"leawind_third_person.option.is_mod_enable": "Is the mod enabled",
 	"leawind_third_person.option.is_mod_enable.desc": "Disabling will display the original third-person view. But you can still open config menu by pressing specified key.",
+	"leawind_third_person.option.player_fade_out_enabled": "Enable player fade out",
+	"leawind_third_person.option.player_fade_out_enabled.desc": "When camera close enough to player, let player invisible",
 	"leawind_third_person.option.lock_camera_pitch_angle": "Lock camera pitch angle",
 	"leawind_third_person.option.lock_camera_pitch_angle.desc": "",
 	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming": "Force player rotate with camera",
