--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -24,7 +24,7 @@
 	"leawind_third_person.option.is_mod_enable": "本模组是否启用",
 	"leawind_third_person.option.is_mod_enable.desc": "禁用后将显示原版第三人称视角，但仍可以按键打开配置屏幕",
 	"leawind_third_person.option.player_fade_out_enabled": "启用玩家淡出",
-	"leawind_third_person.option.player_fade_out_enabled.desc": "避免玩家实体遮挡视线",
+	"leawind_third_person.option.player_fade_out_enabled.desc": "实际上不是“淡出”，只是突然看不见，但避免玩家实体遮挡视线",
 	"leawind_third_person.option.lock_camera_pitch_angle": "锁定相机的俯仰角",
 	"leawind_third_person.option.lock_camera_pitch_angle.desc": "锁定后无法上下转动",
 	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming": "未瞄准时强制玩家跟随相机转动",
