--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -61,6 +61,8 @@
 	"leawind_third_person.option.offset_center.desc": "长按特定按键可以居中，居中状态下X偏移固定为0，玩家处于屏幕中间。本选项可以调整此时的Y偏移。",
 	"leawind_third_person.option.camera_ray_trace_length": "相机视线探测距离",
 	"leawind_third_person.option.camera_ray_trace_length.desc": "当瞄准的物体超过这个距离时，玩家视线会和相机视线平行",
+	"leawind_third_person.option.turn_with_camera_when_enter_first_person": "进入第一人称时玩家转向相机朝向",
+	"leawind_third_person.option.turn_with_camera_when_enter_first_person.desc": "进入第一人称视角时，让玩家面向刚刚结束的第三人称视角中相机的相同方向。",
 	"leawind_third_person.option.projectile_auto_aim": "射击时自动瞄准",
 	"leawind_third_person.option.projectile_auto_aim.desc": "瞄准方块或实体时，自动调整射击角度以击中该目标",
 	"key.categories.leawind_third_person": "Leawind的第三人称",
