add config: adjusting smooth factors

--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -21,6 +21,8 @@
 	"leawind_third_person.option_group.player_rotation.desc": "",
 	"leawind_third_person.option_group.player_fade_out": "Player Fade Out",
 	"leawind_third_person.option_group.player_fade_out.desc": "Make the player fade out in cramped spaces to avoid obstructing the view.",
+	"leawind_third_person.option_group.adjusting_camera": "Adjusting camera",
+	"leawind_third_person.option_group.adjusting_camera.desc": "By default hold Z to adjust camera's offset and distance to player.",
 	"leawind_third_person.option.is_mod_enable": "Is this mod enabled",
 	"leawind_third_person.option.is_mod_enable.desc": "Disabling will show the original third-person perspective but still allow opening the configuration screen with a key.",
 	"leawind_third_person.option.player_fade_out_enabled": "Enable Player Fade Out",
@@ -43,6 +45,10 @@
 	"leawind_third_person.option.camera_distance_max.desc": "Maximum camera-to-player distance when adjusting with the scroll wheel.",
 	"leawind_third_person.option.flying_smooth_factor": "Flying Smooth Factor",
 	"leawind_third_person.option.flying_smooth_factor.desc": "",
+	"leawind_third_person.option.adjusting_camera_offset_smooth_factor": "Adjusting Camera Offset Smooth Factor",
+	"leawind_third_person.option.adjusting_camera_offset_smooth_factor.desc": "Smooth factor for the camera offset adjustments as the camera moves with mouse changes.",
+	"leawind_third_person.option.adjusting_distance_smooth_factor": "Adjusting Camera Distance Smooth Factor",
+	"leawind_third_person.option.adjusting_distance_smooth_factor.desc": "Smooth factor for the camera-to-player distance adjustments as the camera moves with mouse wheel scrolling.",
 	"leawind_third_person.option.smooth_factor_horizon": "Horizontal Smooth Factor",
 	"leawind_third_person.option.smooth_factor_horizon.desc": "",
 	"leawind_third_person.option.smooth_factor_vertical": "Vertical Smooth Factor",
