--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -21,6 +21,8 @@
 	"leawind_third_person.option_group.player_rotation.desc": "",
 	"leawind_third_person.option_group.player_fade_out": "玩家淡出",
 	"leawind_third_person.option_group.player_fade_out.desc": "狭小空间内让玩家淡出，避免遮挡视线。",
+	"leawind_third_person.option_group.adjusting_camera": "调整相机",
+	"leawind_third_person.option_group.adjusting_camera.desc": "默认按住Z可以用鼠标调节相机的偏移量和远近。",
 	"leawind_third_person.option.is_mod_enable": "本模组是否启用",
 	"leawind_third_person.option.is_mod_enable.desc": "禁用后将显示原版第三人称视角，但仍可以按键打开配置屏幕",
 	"leawind_third_person.option.player_fade_out_enabled": "启用玩家淡出",
@@ -43,6 +45,10 @@
 	"leawind_third_person.option.camera_distance_max.desc": "使用滚轮调整时相机到玩家的最大距离",
 	"leawind_third_person.option.flying_smooth_factor": "飞行时相机跟随玩家的平滑系数",
 	"leawind_third_person.option.flying_smooth_factor.desc": "",
+	"leawind_third_person.option.adjusting_camera_offset_smooth_factor": "调整相机时偏移量的平滑系数",
+	"leawind_third_person.option.adjusting_camera_offset_smooth_factor.desc": "调整相机时，相机偏移量随鼠标变化的平滑系数",
+	"leawind_third_person.option.adjusting_distance_smooth_factor": "调整相机时距离平滑系数",
+	"leawind_third_person.option.adjusting_distance_smooth_factor.desc": "调整相机时，相机到玩家距离随鼠标滚轮的滚动而变化的平滑系数",
 	"leawind_third_person.option.smooth_factor_horizon": "水平平滑系数",
 	"leawind_third_person.option.smooth_factor_horizon.desc": "",
 	"leawind_third_person.option.smooth_factor_vertical": "垂直平滑系数",
